[package]
name = "hakoware"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.17.0"
shuttle-secrets = "0.17.0"
tokio = "1.28.2"
tracing = "0.1.37"
